--- a/BattleshipGame/Templates/game_field.html
+++ b/BattleshipGame/Templates/game_field.html
@@ -14,5 +14,6 @@
 		<div>
 			[%ENTER%]
 		</div>
+		<div>Type 'show' to show all the ship and 'restart' to start a new game. </div>
 	</body>
 </html>
